--- a/src/styles/slide/index.css
+++ b/src/styles/slide/index.css
@@ -13,10 +13,6 @@
     margin-bottom: 26px;
 }
 
-.slider-step-item {
-
-}
-
 .slider-circle {
     display: flex;
     justify-content: center;
@@ -39,10 +35,11 @@
     border-radius: 50%;
     margin-right: 12px;
     background-color: var(--Light-blue);
+    color: var(--Purplish-blue);
 }
 
 .slider-step-item-p1 {
-    margin: 0;
+    margin: 0 0 3px 0;
     font-size: 13px;
     color: var(--Cool-gray);
 }
@@ -52,4 +49,26 @@
     color: white;
     font-size: 14px;
     font-weight: 500;
+}
+
+@media (max-width: 957px) {
+    .slide-image {
+      display: none;
+    }
+
+    .slider-step-container {
+        display: flex;
+        position: absolute;
+        padding-top: 37px;
+        padding-left: 63px;
+        top: 0;
+        text-align: center;
+    }
+    .slider-step-item {
+        display: none;
+    }
+
+    .content-container {
+        height: auto;
+    }
 }
